# forza-automation-app

./: .gitignore  README.md  pyproject.toml
macros/: My mac.json
src/: app.py
src/controller/: __init__.py  actions.py  gamepad.py
src/ui/: __init__.py  main_window.py
